[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ChipaPocketOptionData"
version = "1.0.0"
description = "Multi-process data collection library for PocketOption"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ChipaDev Team", email = ""},
]
keywords = ["pocketoption", "binary-options", "trading", "data-collection", "multiprocessing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "BinaryOptionsToolsV2>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ChipaDevTeam/ChipaPocketOptionData"
Documentation = "https://github.com/ChipaDevTeam/ChipaPocketOptionData/tree/main/docs"
Repository = "https://github.com/ChipaDevTeam/ChipaPocketOptionData"
"Bug Tracker" = "https://github.com/ChipaDevTeam/ChipaPocketOptionData/issues"

[tool.setuptools]
packages = ["ChipaPocketOptionData"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
